# chain-forge

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  GETTING_STARTED.md  LICENSE-MIT  Makefile  README.md  TESTING.md  chain-forge.toml.example  cliff.toml
.cargo/: audit.toml  config.toml
.claude/: ARCHITECTURE.md  ARCHITECTURE_DIAGRAM.md  IMPLEMENTATION_SUMMARY.md  PROJECT_COMPLETION.md  README.md
.claude/commands/: commit.md
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  release.yml  security.yml  typescript.yml
chains/bitcoin/: README.md
chains/bitcoin/crates/accounts/: Cargo.toml
chains/bitcoin/crates/accounts/src/: lib.rs  tests.rs
chains/bitcoin/crates/cli/: Cargo.toml
chains/bitcoin/crates/cli/src/: main.rs
chains/bitcoin/crates/core/: Cargo.toml
chains/bitcoin/crates/core/src/: lib.rs
chains/bitcoin/crates/rpc/: Cargo.toml
chains/bitcoin/crates/rpc/src/: lib.rs
chains/solana/: README.md
chains/solana/crates/accounts/: Cargo.toml  README.md
chains/solana/crates/accounts/src/: lib.rs  tests.rs
chains/solana/crates/cli/: Cargo.toml  README.md
chains/solana/crates/cli/src/: main.rs
chains/solana/crates/core/: Cargo.toml  README.md
chains/solana/crates/core/src/: lib.rs
chains/solana/crates/rpc/: Cargo.toml  README.md
chains/solana/crates/rpc/src/: lib.rs
crates/api-server/: Cargo.toml
crates/api-server/src/: handlers.rs  lib.rs  main.rs  routes.rs  server.rs
crates/cli-utils/: Cargo.toml  README.md
crates/cli-utils/src/: format.rs  lib.rs
crates/common/: Cargo.toml  README.md
crates/common/src/: chain.rs  error.rs  lib.rs  registry.rs  types.rs  validation.rs
crates/config/: Cargo.toml  README.md
crates/config/src/: lib.rs  tests.rs
development/dashboard/: README.md  index.html  package.json  tailwind.config.js
development/dashboard/src/: App.tsx  index.css
development/dashboard/src/api/: client.ts  hooks.ts  types.ts
development/dashboard/src/components/: AccountsList.tsx  NewNodeForm.tsx  NodeCard.tsx  NodeGrid.tsx  NodeStatus.tsx  TransactionsList.tsx
development/dashboard/src/pages/: Dashboard.tsx  NodeDetail.tsx
docs/: BITCOIN_DEPENDENCIES.md  CONTRIBUTING.md  GETTING_STARTED.md  TESTING.md  index.md  package.json
docs/.vitepress/: config.ts
docs/api/: overview.md  rest-api.md
docs/bitcoin/: accounts.md  cli.md  configuration.md  overview.md
docs/contributing/: architecture.md  development.md  testing.md
docs/examples/: cli-workflows.md  interactive-cli.md  program-deployment.md  typescript.md
docs/guide/: getting-started.md  installation.md  what-is-chain-forge.md
docs/solana/: accounts.md  cli.md  configuration.md  overview.md  program-deployment.md
docs/typescript/: basic-usage.md  installation.md
examples/bitcoin-basic/: README.md  package.json
examples/bitcoin-basic/src/: index.ts
examples/interactive-cli/: .gitignore  README.md  package.json
examples/interactive-cli/programs/hello_chain_forge/: Cargo.toml  hello_chain_forge.idl.json
examples/interactive-cli/programs/hello_chain_forge/src/: lib.rs
examples/interactive-cli/src/: index.ts  state.ts  types.ts
examples/interactive-cli/src/actions/: bitcoin-mine.ts  bitcoin-transfer.ts  create-program-account.ts  deploy-node.ts  deploy-program.ts  interact-program.ts  send-funds.ts
examples/interactive-cli/src/ui/: formatters.ts  header.ts  menus.ts
examples/interactive-cli/src/utils/: idl.ts  programs.ts
examples/program-deployment/: .gitignore  README.md  package.json  tsconfig.json
examples/program-deployment/program/src/: lib.rs
examples/program-deployment/src/: deploy-with-mnemonic.ts  deploy.ts  index.ts
examples/simple-demo/: README.md  package.json
examples/simple-demo/src/: index.js
examples/typescript-basic/: README.md  package.json
examples/typescript-basic/src/: index.ts  mnemonic-example.ts
npm/@chain-forge/bitcoin/: README.md  package.json
npm/@chain-forge/bitcoin/src/: client.ts  index.ts  types.ts
npm/@chain-forge/solana/: README.md  package.json
npm/@chain-forge/solana/src/: client.ts  index.ts  types.ts
scripts/: release.sh
