[package]
name = "chain-forge-api-server"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "cf-api"
path = "src/main.rs"

[dependencies]
chain-forge-common.workspace = true
chain-forge-config.workspace = true
chain-forge-solana-core.workspace = true
chain-forge-solana-accounts.workspace = true
chain-forge-solana-rpc.workspace = true
chain-forge-bitcoin-core.workspace = true
chain-forge-bitcoin-accounts.workspace = true
chain-forge-bitcoin-rpc.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
axum.workspace = true
tower-http.workspace = true
clap.workspace = true
eyre.workspace = true
chrono.workspace = true
