[package]
name = "chain-forge-common"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
eyre.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
chrono.workspace = true
fs2.workspace = true
dirs = "5.0"

[dev-dependencies]
tempfile = "3.20"
