[package]
name = "chain-forge-config"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
chain-forge-common.workspace = true
serde.workspace = true
toml.workspace = true
eyre.workspace = true
dirs = "5.0"

[dev-dependencies]
tempfile = "3.8"
