[package]
name = "chain-forge-bitcoin-accounts"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
chain-forge-common.workspace = true
chain-forge-config.workspace = true
bip39.workspace = true
serde.workspace = true
serde_json.workspace = true
eyre.workspace = true
rand.workspace = true
hmac = "0.12"
sha2 = "0.10"
bitcoin = { version = "0.32", features = ["serde", "rand"] }
secp256k1 = { version = "0.29", features = ["rand", "serde"] }

[dev-dependencies]
tempfile = "3.8"
