[package]
name = "chain-forge-bitcoin-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
chain-forge-common.workspace = true
chain-forge-config.workspace = true
chain-forge-bitcoin-accounts = { path = "../accounts" }
chain-forge-bitcoin-rpc = { path = "../rpc" }
bitcoin = { version = "0.32", features = ["serde"] }
tokio.workspace = true
eyre.workspace = true
serde.workspace = true
serde_json.workspace = true

[target.'cfg(unix)'.dependencies]
libc = "0.2"
