[package]
name = "chain-forge-bitcoin-rpc"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
chain-forge-common.workspace = true
chain-forge-bitcoin-accounts = { path = "../accounts" }
bitcoincore-rpc = "0.19"
bitcoin = { version = "0.32", features = ["serde"] }
tokio.workspace = true
eyre.workspace = true
serde.workspace = true
serde_json.workspace = true
