[package]
name = "chain-forge-solana-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
chain-forge-common.workspace = true
chain-forge-config.workspace = true
chain-forge-solana-accounts.workspace = true
chain-forge-solana-rpc.workspace = true
tokio.workspace = true
eyre.workspace = true
serde.workspace = true
