[package]
name = "chain-forge-solana-rpc"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
chain-forge-common.workspace = true
chain-forge-solana-accounts.workspace = true
solana-sdk.workspace = true
solana-client.workspace = true
tokio.workspace = true
eyre.workspace = true
openssl.workspace = true
