[package]
name = "hello_chain_forge"
version = "0.1.0"
edition = "2021"

[workspace]
# Empty workspace table to exclude this program from the parent workspace.
# This is required for standalone Solana programs built with cargo-build-sbf.

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
solana-program = "2.0"
# Pin blake3 to avoid edition 2024 requirement (Solana's bundled Rust is 1.84)
blake3 = "=1.5.5"

[profile.release]
overflow-checks = true
